# ONNX-custom-operator

./: README.md
inference/: CMakeLists.txt  reduction.cpp  setup.py
inference/reduction_op.egg-info/: PKG-INFO  SOURCES.txt
models/: export_model_to_onnx.py
research/: model.py  result.csv
